8158855: Fix remaining module dependences in java/lang
Reviewed-by: alanb, mchung, amlu